--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
 cryptography==37.0.4
+cycler==0.11.0
 Deprecated==1.2.13
 Flask==2.1.3
+fonttools==4.37.1
 gcloud==0.18.3
 googleapis-common-protos==1.56.4
 gunicorn==20.1.0
@@ -16,8 +18,14 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jwcrypto==1.3.1
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.5.3
+numpy==1.23.3
 oauth2client==4.1.3
+packaging==21.3
+pandas==1.4.4
+Pillow==9.2.0
 protobuf==4.21.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -25,7 +33,9 @@ pycparser==2.21
 pycryptodome==3.15.0
 pyparsing==3.0.9
 Pyrebase4==4.5.0
+python-dateutil==2.8.2
 python-jwt==3.3.3
+pytz==2022.2.1
 requests==2.28.1
 requests-toolbelt==0.9.1
 rsa==4.9
