--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 venv
+*.pyc
+__pycache__/
+instance/
+*.cpython-39.pyc
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+*.pyc
+*.pyc
