--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==37.0.4
 cycler==0.11.0
 Deprecated==1.2.13
 Flask==2.1.3
+Flask-Mail==0.9.1
 fonttools==4.37.1
 gcloud==0.18.3
 googleapis-common-protos==1.56.4
