--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ dist/
 build/
 *.egg-info/
 *.pyc
-*.pyc
-*.pyc
+algo/__pycache__/algorithm.cpython-39.pyc
+blueprint/__pycache__/authentication.cpython-39.pyc
