--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 colorama==0.4.5
+cryptocode==0.1
 cryptography==37.0.4
 cycler==0.11.0
 Deprecated==1.2.13
@@ -33,6 +34,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pycryptodome==3.15.0
+pycryptodomex==3.15.0
 pyparsing==3.0.9
 Pyrebase4==4.5.0
 python-dateutil==2.8.2
