--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.9.1
 async-generator==1.10
 attrs==22.1.0
 beautifulsoup4==4.11.1
@@ -47,6 +48,7 @@ python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-jwt==3.3.3
 pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 requests-toolbelt==0.9.1
 rsa==4.9
@@ -58,6 +60,8 @@ soupsieve==2.3.2.post1
 tqdm==4.64.1
 trio==0.22.0
 trio-websocket==0.9.2
+tzdata==2022.5
+tzlocal==4.2
 urllib3==1.26.11
 webdriver-manager==3.8.4
 Werkzeug==2.2.1
